Update files via upload
Fix formatting issues

--- a/book/spanish/content/ch00-preface.html
+++ b/book/spanish/content/ch00-preface.html
@@ -22,43 +22,43 @@
 
 <ul>
 	<li>
-	<p><a href="hello">1/Hola</a>: aprende sobre p5.js.</p>
+	<p><a href="#hello">1/Hola</a>: aprende sobre p5.js.</p>
 	</li>
 	<li>
-	<p><a href="starting_to_code">2/Empezando a programar</a>: crea tu primer programa en p5.js.</p>
+	<p><a href="#starting_to_code">2/Empezando a programar</a>: crea tu primer programa en p5.js.</p>
 	</li>
 	<li>
-	<p><a href="draw">3/Dibujar</a>: define y dibuja figuras simples.</p>
+	<p><a href="#draw">3/Dibujar</a>: define y dibuja figuras simples.</p>
 	</li>
 	<li>
-	<p><a href="variables">4/Variables</a>: almacena, modifica y reusa datos.</p>
+	<p><a href="#variables">4/Variables</a>: almacena, modifica y reusa datos.</p>
 	</li>
 	<li>
-	<p><a href="response">5/Respuesta</a>: controla e influencia programas con el rat&#xF3;n, el teclado y el toque.</p>
+	<p><a href="#response">5/Respuesta</a>: controla e influencia programas con el rat&#xF3;n, el teclado y el toque.</p>
 	</li>
 	<li>
-	<p><a href="translate">6/Trasladar, rotar, escalar</a>: transforma las coordenadas.</p>
+	<p><a href="#translate">6/Trasladar, rotar, escalar</a>: transforma las coordenadas.</p>
 	</li>
 	<li>
-	<p><a href="media">7/Medios</a>: carga y muestra medios, incluyendo im&#xE1;genes y tipos de letras.</p>
+	<p><a href="#media">7/Medios</a>: carga y muestra medios, incluyendo im&#xE1;genes y tipos de letras.</p>
 	</li>
 	<li>
-	<p><a href="motion">8/Movimiento</a>: mueve y coreograf&#xED;a figuras.</p>
+	<p><a href="#motion">8/Movimiento</a>: mueve y coreograf&#xED;a figuras.</p>
 	</li>
 	<li>
-	<p><a href="functions">9/Funciones</a>: construye nuevos m&#xF3;dulos de c&#xF3;digo.</p>
+	<p><a href="#functions">9/Funciones</a>: construye nuevos m&#xF3;dulos de c&#xF3;digo.</p>
 	</li>
 	<li>
-	<p><a href="objects">10/Objetos</a>: crea m&#xF3;dulos de c&#xF3;digo que combinan variables y funciones.</p>
+	<p><a href="#objects">10/Objetos</a>: crea m&#xF3;dulos de c&#xF3;digo que combinan variables y funciones.</p>
 	</li>
 	<li>
-	<p><a href="arrays">11/Arreglos</a>: simplifica el trabajo con listas de variables.</p>
+	<p><a href="#arrays">11/Arreglos</a>: simplifica el trabajo con listas de variables.</p>
 	</li>
 	<li>
-	<p><a href="data">12/Datos</a>: carga y visualiza datos.</p>
+	<p><a href="#data">12/Datos</a>: carga y visualiza datos.</p>
 	</li>
 	<li>
-	<p><a href="extend">13/Extensi&#xF3;n</a>: aprende sobre sonido y DOM.</p>
+	<p><a href="#extend">13/Extensi&#xF3;n</a>: aprende sobre sonido y DOM.</p>
 	</li>
 </ul>
 </section>
@@ -151,8 +151,6 @@
 <h1>Agradecimientos</h1>
 
 <p>Le agradecemos a Brian Jepson y a Anna Kaziunas France por su gran energ&#xED;a, apoyo y visi&#xF3;n.</p>
-
-<p>We can’t imagine this book without Massimo Banzi’s <em>Getting Started with Arduino</em> (Maker Media). Massimo’s excellent book is the prototype.</p>
 
 <p>No podemos imaginar este libro sin <em>Getting Started with Arduino</em> (Maker Media) de Massimo Banzi. El excelente libro de Massimo fue el prototipo.</p>
 
