--- a/book/spanish/content/ch01-hello.html
+++ b/book/spanish/content/ch01-hello.html
@@ -7,7 +7,7 @@
 
 <p>p5.js ofrece una manera de programar a trav&#xE9;s de la creaci&#xF3;n de gr&#xE1;ficos interactivas. Existen muchas maneras posibles de ense&#xF1;ar c&#xF3;digo, pero los estudiantes usualmente encuentran apoyo y motivaci&#xF3;n al tener una retroalimentaci&#xF3;n visual inmediata. p5.js provee esta retroalimentaci&#xF3;n, y su &#xE9;nfasis en im&#xE1;genes, prototipado y comunidad es discutido en las siguientes p&#xE1;ginas.</p>
 
-<section data-type="sect1">
+<section data-type="sect1" class="pagebreak-before">
 <h1>Bosquejo y prototipado</h1>
 
 <p>Bosquejar &nbsp;es una forma de pensar; es juguet&#xF3;n y r&#xE1;pido. El objetivo b&#xE1;sico es explorar muchas ideas en un corto periodo de tiempo. En nuestro propio trabajo, usualmente empezamos bosquejando en papel y luego trasladamos nuestros resultados a c&#xF3;digo. Las ideas para animaci&#xF3;n e interacci&#xF3;n son usualmente bosquejadas como un gui&#xF3;n gr&#xE1;fico con anotaciones. Despu&#xE9;s de hacer algunos bosquejos en software, las mejores ideas son seleccionadas y combinadas en prototipos (<a data-type="xref" href="#Fig_01_01">Figura 1-1</a>). Es un proceso c&#xED;clico de hacer, probar y mejorar que va y viene entre papel y pantalla.</p>
@@ -17,7 +17,7 @@
 </figure>
 </section>
 
-<section data-type="sect1">
+<section data-type="sect1" class="pagebreak-before">
 <h1>Flexibilidad</h1>
 
 <p>Tal como un cintur&#xF3;n de herramientas para software, p5.js est&#xe1; compuesto de muchas herramientas que funcionan en conjunto en diversas combinaciones. Como resultado, puede ser usado para exploraciones r&#xE1;pidas o para investigaci&#xF3;n en profundidad. Como un programa hecho con p5.js puede ser tan corto como unas pocas l&#xED;neas de c&#xF3;digo o tan largo como miles, existe espacio para crecimiento y variaci&#xF3;n. Las bibliotecas de p5.js lo extienden a otros dominios incluyendo el trabajo con sonido y la inclusi&#xF3;n de botones, barras deslizadoras, cajas de entrada de datos y captura de c&#xE1;mara con HTML.</p>
