--- a/book/spanish/content/ch03-draw.html
+++ b/book/spanish/content/ch03-draw.html
@@ -150,13 +150,13 @@ function draw() {
 <section data-type="sect2" id="ex-3-7">
 <h2>Ejemplo 3-7: dibuja una parte de una elipse</h2>
 
-<p>La funci&#xF3;n <code>arc()</code> <a contenteditable="false" data-primary="arc() function" data-type="indexterm">&nbsp;</a>dibuja una parte de una elipse:</p>
+<p>La funci&#xF3;n <code>arc()</code> <a contenteditable="false" data-primary="arc() function" data-type="indexterm"></a>dibuja una parte de una elipse:</p>
 
 <figure><img alt="Ex 03 07" src="images/gspj_03in07.png" />
 <figcaption/>
 </figure>
 
-<pre data-code-language="p5js" data-type="programlisting">
+<pre data-code-language="p5js" data-type="programlisting" class="pagebreak-before">
 function setup() {
   createCanvas(480, 120);
 }
