--- a/book/spanish/content/ch04-variables.html
+++ b/book/spanish/content/ch04-variables.html
@@ -362,9 +362,9 @@ function setup() {
   createCanvas(480, 120);
   strokeWeight(2);
 }
-<!--Page Break--><br class="page-break-after" />
-<!--Page Break--><br class="page-break-after" />
-<!--Page Break--><br class="page-break-after" />
+<!--Page Break--><br class="pagebreak-after" />
+<!--Page Break--><br class="pagebreak-after" />
+<!--Page Break--><br class="pagebreak-after" />
 function draw() {
   background(204);
   for (var i = 20; i &lt; 400; i += 8) {
