--- a/book/spanish/content/ch05-response.html
+++ b/book/spanish/content/ch05-response.html
@@ -500,7 +500,7 @@ function draw() {
 <section data-type="sect1" class="pagebreak-before">
 <h1>Tipo</h1>
 
-<p>p5.js mantiene<a contenteditable="false" data-primary="typing, responses to" data-type="indexterm" id="trt5">&nbsp;</a><a contenteditable="false" data-primary="response to input" data-secondary="keystrokes" data-type="indexterm" id="rti5ks">&nbsp;</a>&nbsp;<a contenteditable="false" data-primary="rectangles" data-secondary="cursor position relative to" data-startref="r5cprt" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="cursor location" data-startref="cl5" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="response to input" data-secondary="cursor location" data-startref="rti3cl" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="keystroke responses" data-type="indexterm" id="kr5">&nbsp;</a> el registro de cualquier tecla que sea presionada en el teclado, adem&#xE1;s de la &#xFA;ltima tecla presionada. Tal como la variable <code>mouseIsPressed</code>, la variable <code>keyIsPressed</code><a contenteditable="false" data-primary="keyIsPressed variable" data-type="indexterm">&nbsp;</a> es <code>true</code> cuando cualquier tecla es presionada, y es <code>false</code> cuando no hay teclas presionadas.</p>
+<p>p5.js mantiene<a contenteditable="false" data-primary="typing, responses to" data-type="indexterm" id="trt5"></a><a contenteditable="false" data-primary="response to input" data-secondary="keystrokes" data-type="indexterm" id="rti5ks"></a><a contenteditable="false" data-primary="rectangles" data-secondary="cursor position relative to" data-startref="r5cprt" data-type="indexterm"></a><a contenteditable="false" data-primary="cursor location" data-startref="cl5" data-type="indexterm"></a><a contenteditable="false" data-primary="response to input" data-secondary="cursor location" data-startref="rti3cl" data-type="indexterm"></a><a contenteditable="false" data-primary="keystroke responses" data-type="indexterm" id="kr5"></a> el registro de cualquier tecla que sea presionada en el teclado, adem&#xE1;s de la &#xFA;ltima tecla presionada. Tal como la variable <code>mouseIsPressed</code>, la variable <code>keyIsPressed</code><a contenteditable="false" data-primary="keyIsPressed variable" data-type="indexterm">&nbsp;</a> es <code>true</code> cuando cualquier tecla es presionada, y es <code>false</code> cuando no hay teclas presionadas.</p>
 
 <section data-type="sect2">
 <h2>Ejemplo 5-16: presiona una tecla</h2>
@@ -775,7 +775,7 @@ function draw() {
   ellipse(x+12, neckY, radius, radius);
   fill(255);
   ellipse(x+24, neckY-6, 14, 14);
-  <!--Page Break--><br class="page-break-after" />
+  <!--Page Break--><br class="pagebreak-after" />
   fill(0);
   ellipse(x+24, neckY-6, 3, 3);
 }</pre>
