--- a/book/spanish/content/ch08-motion.html
+++ b/book/spanish/content/ch08-motion.html
@@ -466,7 +466,7 @@ function setup() {
   ellipseMode(RADIUS);
   background(204);
 }
-<!--Page Break--><br class="page-break-after" />
+<!--Page Break--><br class="pagebreak-after" />
 function draw() {
   // Modifica la posición en un monto aleatorio pequeño
   x += random(-4, 4);
