--- a/book/spanish/content/colo.html
+++ b/book/spanish/content/colo.html
@@ -1,5 +1,5 @@
 <section data-type="colophon" xmlns="http://www.w3.org/1999/xhtml">
 <h1>Colof&#xf3;n</h1>
-
-<p>El tipo de letra del cuerpo es Benton Sans dise&#xf1;ado por Tobias Frere-Jones y Cyrus Highsmith. El tipo de letra del c&#xf3;digo es TheSansMono Condensed Regular by Luc(as) de Groot. El tipo de letra de muestra es Serifa dise&#xf1;ado por Adrian Frutiger.</p>
+    
+<p>El tipo de letra del cuerpo es TheSerif dise&#xf1;ado por Luc(as) de Groot. El tipo de letra del c&#xf3;digo es TheSansMono por Luc(as) de Groot.</p>
 </section>
