--- a/book/spanish/content/appa.html
+++ b/book/spanish/content/appa.html
@@ -1,5 +1,5 @@
 <section data-type="appendix" id="coding_tips">
-<h1 class="chapterhead">Consejos de programacion</h1>
+<h1 class="chapterhead">Apéndice A: Consejos de programacion</h1>
 
 <p class="lede">Programar <a contenteditable="false" data-primary="coding tips" data-type="indexterm" id="ctappa">&nbsp;</a>es un tipo de escritura. Como todos los tipos de escritura, programar tiene reglas espec&#xed;ficas. Para comparar, mencionaremos r&#xe1;pidamente algunas de las reglas del espa&#xf1;ol a las que probablemente no les has puesto atenci&#xf3;n porque te son naturales.</p>
 
