--- a/book/spanish/content/copyright.html
+++ b/book/spanish/content/copyright.html
@@ -1,29 +1,30 @@
 <section data-type="copyright-page" xmlns="http://www.w3.org/1999/xhtml">
-<h1>Make: Getting Started with p5.js</h1>
+<h1>Introducción a p5.js</h1>
 
-<p class="author">por <span class="firstname">Lauren </span> <span class="surname">McCarthy</span>, <span class="firstname">Casey </span> <span class="surname">Reas</span>, y <span class="firstname">Ben </span> <span class="surname">Fry</span></p>
+<p class="author">por <span class="firstname">Lauren </span> <span class="surname">McCarthy</span>, <span class="firstname">Casey </span> <span class="surname">Reas</span>, and <span class="firstname">Ben </span> <span class="surname">Fry</span>. Traducido por <span class="firstname">Aarón </span> <span class="surname">Montoya-Moraga</span></p>
 
-<p class="copyright">Copyright © 2016 Maker Media. Todos los derechos reservados.</p>
+<p class="copyright">Copyright © 2016 Maker Media. Todos los derechos reservados. Traducción al español © 2017 Processing Foundation</p>
 
-<p class="printlocation">Impreso en los Estados Unidos de América.</p>
+<p class="printlocation">Impreso en Estados Unidos.</p>
 
-<p class="publisher">Publicado por <span class="publishername">Maker Media, Inc.</span>, 1160 Battery Street East, Suite 125, San Francisco, CA 94111.</p>
+<p class="publisher">Publicado por <span class="publishername">Processing Foundation, Inc.</span>, https://processingfoundation.org</p>
 
-<p>Los libros de Maker Media pueden ser adquiridos para uso educacional, para negocios o para ventas promocionales. También están disponibles ediciones en línea para la mayoría de los títulos (<a href="http://safaribooksonline.com">http://safaribooksonline.com</a>). Para más información, contacta a nuestro departamento de ventas empresarial/institucional: 800-998-9938 or <span data-type="email">corporate@oreilly.com</span>.</p>
+<!--<p>Maker Media books may be purchased for educational, business, or sales promotional use. Online editions are also available for most titles (<a href="http://safaribooksonline.com">http://safaribooksonline.com</a>). For more information, contact our corporate/institutional sales department: 800-998-9938 or <span data-type="email">corporate@oreilly.com</span>.</p>-->
 
 <ul class="stafflist">
-	<li><span class="staffrole">Edición:</span> Anna Kaziunas France</li>
-	<li><span class="staffrole">Edición de producción:</span> Kristen Brown</li>
-	<li><span class="staffrole">Edición de copia:</span> Jasmine Kwityn</li>
-	<li><span class="staffrole">Corrección de pruebas:</span> Kim Cofer</li>
-	<li><span class="staffrole">Indexado:</span> Wendy Catalano</li>
-	<li><span class="staffrole">Diseño de interior:</span> David Futato</li>
-	<li><span class="staffrole">Diseño de portada:</span> Karen Montgomery</li>
-	<li><span class="staffrole">Ilustraciones:</span> Taeyoon Choi y Rebecca Demarest</li>
+	<li><span class="staffrole">Diseñao de portada, versión en español:</span> Tyler Yin</li>
+	<li><span class="staffrole">Diseño interior, versión en español:</span> Casey Reas</li>
+	<li><span class="staffrole">Composición tipográfica, versión en español:</span> Tyler Yin</li>
+	<li><span class="staffrole">Ilustraciones:</span> Taeyoon Choi</li>
+	<li><span class="staffrole">Edición, versión en inglés:</span> Anna Kaziunas France</li>
+	<li><span class="staffrole">Edición de producción, versión en inglés:</span> Kristen Brown</li>
+	<li><span class="staffrole">Corrección de estilo, versión en inglés:</span> Jasmine Kwityn</li>
+	<li><span class="staffrole">Corrección de pruebas, versión en inglés:</span> Kim Cofer</li>
+	<li><span class="staffrole">Diseño interior, versión en inglés:</span> David Futato</li>
 </ul>
 
 <ul class="printings">
-	<li><span class="printedition">Octubre 2015:</span> Primera edición en inglés</li>
+	<li><span class="printedition">Diciembre 2017:</span> primera edición</li>
 </ul>
 <!--Add additional revdate spans below as needed.-->
 
@@ -31,24 +32,19 @@
 <h1 class="revisions">Historial de revisiones de la primera edición</h1>
 
 <ul class="releases">
-	<li><span class="revdate">2015-09-25:</span> Primer lanzamiento</li>
+	<li><span class="revdate">2017-12-04:</span> Primer lanzamiento</li>
 </ul>
 </div>
 
-<p class="errata">Revisar <a href="http://oreilly.com/catalog/errata.csp?isbn=9781457186776">http://oreilly.com/catalog/errata.csp?isbn=9781457186776</a> para ver detalles del lanzamiento.</p>
+<!--<p class="errata">See <a href="http://oreilly.com/catalog/errata.csp?isbn=9781457186776">http://oreilly.com/catalog/errata.csp?isbn=9781457186776</a> for release details.</p>-->
 
 <div class="legal">
-<p>El logo de Make y el logo de Maker Media son margas registradas de Maker Media, Inc. <em>Make: Getting Started with p5.js</em>, la imagen de portada, y el comercio relacionado son marcas registradas de Maker Media, Inc.</p>
-
-<p>Aunque la editorial y los autores han tratado de asegurar que la información y las instrucciones contenidas en este manual sean certeras, la editorial y los autores niegan toda responsabilidad sonre errores u omisiones, incluyendo sin limitación la responsabilidad por daños causados del uso o de la confianza en este trabajo. El uso de la información y las instrucciones contenidas en este trabajo corre bajo tu propio riesgo. Si cualquier ejemplo de código u otra tecnología contenida o descrita está sujeto a licencias de código abierto o a los derechos de propiedad intelectual de terceros, es tu responsabilidad asegurarte de que tu uso cumpla con dichas licencias y/o derechos. <!--PROD: Uncomment the following sentence if appropriate and add it to the
-      above para:--> <!--This book is not intended as [legal/medical/financial; use the appropriate
-      reference] advice. Please consult a qualified professional if you
-      require [legal/medical/financial] advice.--></p>
+<p>Aunque la editorial y los autores se han esforzado de buena fe en asegurar que la información y las instrucciones contenidas en esta obra sean correctos, la editorial y los autores niegan toda responsabilidad por los posibles errores y omisiones, incluyendo sin limitaciones la responsabilidad por los daños resultantes del uso o de la confianza puesta en esta obra. El uso de la información y las instrucciones contenidas en este trabajo se realiza bajo tu propio riesgo. Si cualquier porción de código u otra tecnología contenidos o descritos por esta obra está sujeto a licencias de código abierto o a los derechos propiedad intelectual de terceros, es tu propia responsabilidad asegurarte que tu uso cumpla con estas licencias y/o derechos.</p>
 </div>
 
 <div class="copyright-bottom">
-<p class="isbn">978-1-457-18677-6</p>
+<p class="isbn">TBD</p>
 
-<p class="printer">[LSI]</p>
+<!--<p class="printer">[LSI]</p>-->
 </div>
 </section>
